--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "@unform/mobile": "^2.1.6",
     "axios": "^0.21.1",
     "date-fns": "^2.30.0",
-    "react": "17.0.1",
-    "react-native": "^0.64.4",
+    "eject": "^0.0.4",
+    "react": "18.2.0",
+    "react-native": "0.72.6",
+    "react-native-eject": "^0.2.0",
     "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-reanimated": "^2.2.0",
