--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@fortawesome/free-brands-svg-icons": "^6.4.2",
+    "@fortawesome/react-native-fontawesome": "^0.3.0",
     "@react-native-community/async-storage": "^1.12.1",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/bottom-tabs": "^5.11.11",
@@ -30,6 +32,7 @@
     "react-native-screens": "^3.4.0",
     "react-native-star-rating": "^1.1.0",
     "react-native-vector-icons": "^8.1.0",
+    "react-router-dom": "^6.17.0",
     "styled-components": "^5.3.11",
     "yup": "^0.32.9"
   },
