--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
     "@unform/core": "^2.1.6",
     "@unform/mobile": "^2.1.6",
     "axios": "^0.21.1",
+    "cors": "^2.8.5",
     "date-fns": "^2.30.0",
     "eject": "^0.0.4",
+    "express": "^4.18.2",
+    "mongoose": "^7.6.3",
     "react": "17.0.1",
     "react-native": "^0.64.4",
     "react-native-eject": "^0.2.0",
@@ -28,8 +31,8 @@
     "react-native-reanimated": "^2.2.0",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.4.0",
-    "react-native-vector-icons": "^9.2.0",
     "react-native-star-rating": "^1.1.0",
+    "react-native-vector-icons": "^9.2.0",
     "styled-components": "^5.3.11",
     "yup": "^0.32.9"
   },
@@ -54,7 +57,7 @@
     "eslint-plugin-promise": "^5.1.0",
     "eslint-plugin-react": "^7.24.0",
     "jest": "^26.6.3",
-    "metro-react-native-babel-preset": "^0.64.0",
+    "metro-react-native-babel-preset": "^0.77.0",
     "prettier": "^2.3.2",
     "react-native-dotenv": "^3.0.0",
     "react-test-renderer": "17.0.1",
