--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "eject": "^0.0.4",
     "express": "^4.18.2",
     "mongoose": "^7.6.3",
-    "react": "17.0.1",
-    "react-native": "^0.64.4",
+    "react": "^18.2.0",
+    "react-native": "^0.70.13",
     "react-native-eject": "^0.2.0",
     "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "^1.10.3",
