--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@unform/core": "^2.1.6",
     "@unform/mobile": "^2.1.6",
     "axios": "^0.21.1",
+    "cheerio": "^1.0.0-rc.12",
     "cors": "^2.8.5",
     "date-fns": "^2.30.0",
     "eject": "^0.0.4",
